err/namedmaps.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/namedmaps'...
Compiling './lib/python3.5/site-packages/namedmaps/namededitmap.py'...
***   File "./lib/python3.5/site-packages/namedmaps/namededitmap.py", line 25
    kwargs = ', '.join(f'{key}={value!r}' for key, value in self.items())
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/namedmaps/namedmap.py'...
***   File "./lib/python3.5/site-packages/namedmaps/namedmap.py", line 18
    raise AttributeError(f"'{typename}' object has no attribute {name!r}")
                                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/namedmaps/utils.py'...
***   File "./lib/python3.5/site-packages/namedmaps/utils.py", line 7
    f' alphanumeric characters and underscores: {name!r}'))
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/namedmaps-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
